Mise a jours intégration modal

--- a/Tontine/Application mobile/Frontend/app.json
+++ b/Tontine/Application mobile/Frontend/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/integration_utilisateur/integration_utilisateur",
     "pages/index/index",
     "pages/PageContact/PageContact",
     "pages/Accueil/Accueil"
