Mise a jours page notification

--- a/Tontine/Application mobile/Frontend/app.json
+++ b/Tontine/Application mobile/Frontend/app.json
@@ -1,10 +1,11 @@
 {
   "pages": [
-    
     "pages/index/index",
     "pages/PageContact/PageContact",
     "pages/Accueil/Accueil",
-    "pages/Tour/Tour"
+    "pages/Tour/Tour",
+    "pages/SelectContact/SelectContact",
+    "pages/Notification/Notification"
 
   ],
   "window": {
