--- a/Vinted/Application mobile/Frontend/app.json
+++ b/Vinted/Application mobile/Frontend/app.json
@@ -1,8 +1,11 @@
 {
   "pages": [
+      "pages/Formulaire-Article/Formulaire-Article",
     "pages/integration_utilisateur/integration_utilisateur",
     "pages/Accueil/Accueil",
     "pages/index/index"
+    
+    
 
   ],
   "window": {
