--- a/Vinted/Application mobile/Frontend/project.private.config.json
+++ b/Vinted/Application mobile/Frontend/project.private.config.json
@@ -1,6 +1,6 @@
 {
     "projectname": "ProjetMaxit",
     "setting": {
-        "compileHotReLoad": true
+        "compileHotReLoad": false
     }
 }
