--- a/Tontine/Application mobile/Backend/api-nodeFrean/.env
+++ b/Tontine/Application mobile/Backend/api-nodeFrean/.env
@@ -1,5 +1,17 @@
 PG_USER=postgres
-PG_HOST=192.168.252.119
+PG_HOST=192.168.252.188
 PG_DATABASE=maxit_tontine
 PG_PASSWORD=Psaumes119
 PG_PORT=5432
+
+# PG_USER=postgres
+# PG_HOST=127.0.0.1
+# PG_DATABASE=maxit_tontine
+# PG_PASSWORD=tomurashigaraki
+# PG_PORT=5432
+
+# PG_USER=postgres.omakpeuirvvloprhvxho
+# PG_HOST=aws-0-eu-west-3.pooler.supabase.com
+# PG_DATABASE=postgres
+# PG_PASSWORD=Psaumes119.
+# PG_PORT=5432
