mise à jour de vinted

--- a/Vinted/Application mobile/Frontend/miniprogram-6/app.json
+++ b/Vinted/Application mobile/Frontend/miniprogram-6/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/chargement/chargement",
     "pages/payement/payement",
     "pages/panier/panier",
     "pages/negociation/negociation",
